--- a/compile_data.ipynb
+++ b/compile_data.ipynb
@@ -285,7 +285,7 @@
     "df_max_daily['SOFA_long_stay'] = ~pd.isnull(df_max_daily['SOFA_d8'])\n",
     "\n",
     "df_max_daily['TotalAUC'] = df_max_daily[c_list[c_list.str.contains('Area'.format(day_num))]].sum(axis=1, skipna=True)\n",
-    "df_max_daily.to_csv(\"sofa_param eters_daily_max.csv\", index=False)\n",
+    "df_max_daily.to_csv(\"sofa_parameters_daily_max.csv\", index=False)\n",
     "# df_max_daily\n",
     "# Now write the DataFrame to a .csv file\n",
     "#df_max_daily.to_csv(\"sofa_parameters_daily_max.csv\", index=False)"
