--- a/compile_data.ipynb
+++ b/compile_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bf8ef261",
    "metadata": {
     "tags": []
@@ -12,8 +12,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pandas version:  2.0.0\n",
-      "SQLAlchemy version:  2.0.9\n"
+      "Pandas version:  2.1.2\n",
+      "SQLAlchemy version:  2.0.23\n"
      ]
     }
    ],
@@ -285,50 +285,13 @@
     "df_max_daily['SOFA_long_stay'] = ~pd.isnull(df_max_daily['SOFA_d8'])\n",
     "\n",
     "df_max_daily['TotalAUC'] = df_max_daily[c_list[c_list.str.contains('Area'.format(day_num))]].sum(axis=1, skipna=True)\n",
-    "df_max_daily.to_csv(\"sofa_parameters_daily_max.csv\", index=False)\n",
-    "# df_max_daily\n",
-    "# Now write the DataFrame to a .csv file\n",
-    "#df_max_daily.to_csv(\"sofa_parameters_daily_max.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27e05341-506d-4901-bb14-74727a9d0c11",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_max_bi = pd.DataFrame({'stay_id': max_values['stay_id'].unique()})\n",
-    "for column in ['respiration_24hours', 'coagulation_24hours', 'liver_24hours', 'cardiovascular_24hours', 'cns_24hours', 'renal_24hours']:\n",
-    "    df_pivot = max_values.pivot(index='stay_id', columns='day_count', values=column)\n",
-    "    df_pivot.columns = [f'{column}_d{day}' for day in df_pivot.columns]\n",
-    "    df_max_bi = df_max_bi.merge(df_pivot.reset_index(), on='stay_id')\n",
     "\n",
-    "# Merge the two DataFrames on 'stay_id'\n",
-    "df_max_bi = sofa_dem[['subject_id','hadm_id','stay_id', 'survival', '30d_mortality_status', '90d_mortality_status']].merge(df_max_bi, on='stay_id', how='left')\n",
+    "#coerces races into smaller list of categories\n",
+    "race_map =pd.read_csv('race_map.csv',header=None)\n",
+    "race_map.columns=['race','race_sh']\n",
+    "df_max_daily['race'] = df_max_daily.merge(race_map, on='race')['race_sh']\n",
     "\n",
-    "# Define the mapping of old column names to new column names\n",
-    "column_mapping = {old: old.replace('_24hours', '_SOFA') for old in df_max_bi.columns if '_24hours' in old}\n",
-    "\n",
-    "# Rename the columns\n",
-    "df_max_bi = df_max_bi.rename(columns=column_mapping)\n",
-    "\n",
-    "c_list = df_max_bi.columns\n",
-    "for day_num in range(1,day_max+1):\n",
-    "    df_max_bi['SOFA_d{}'.format(day_num)] = df_max_bi[c_list[c_list.str.endswith('_d{}'.format(day_num))]].sum(axis=1, skipna=False)\n",
-    "\n",
-    "\n",
-    "\n",
-    "for day_num in range(1,day_max-1,2):\n",
-    "    df_max_bi['delta{}_{}'.format(day_num,day_num+2)] = df_max_bi['SOFA_d{}'.format(day_num+2)]-df_max_bi['SOFA_d{}'.format(day_num)]\n",
-    "    df_max_bi['Area{}_{}'.format(day_num,day_num+2)] = (df_max_bi['SOFA_d{}'.format(day_num+2)]+df_max_bi['SOFA_d{}'.format(day_num)])/2 + df_max_bi['SOFA_d{}'.format(day_num+1)]\n",
-    "\n",
-    "c_list = df_max_bi.columns\n",
-    "df_max_bi['TotalAUC'] = df_max_bi[c_list[c_list.str.contains('Area'.format(day_num))]].sum(axis=1, skipna=True)\n",
-    "df_max_bi.to_csv(\"sofa_parameters_daily_max_step2.csv\", index=False)\n",
-    "#df_max_bi"
+    "df_max_daily.to_csv(\"sofa_parameters.csv\", index=False)"
    ]
   },
   {
@@ -338,8 +301,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# continue to analyse_results to run analysis"
+    "# continue to analyze_results to run analysis"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c27464fd-b6cf-4810-97d2-6f92eb554ccc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
