explicit skip na

--- a/compile_data.ipynb
+++ b/compile_data.ipynb
@@ -280,8 +280,8 @@
     "df_max_daily['SOFA_max'] =temp.max(axis=1)\n",
     "df_max_daily['SOFA_min'] =temp.min(axis=1)\n",
     "df_max_daily['SOFA_range'] = df_max_daily['SOFA_max']-df_max_daily['SOFA_min']\n",
-    "df_max_daily['SOFA_max_day'] =temp.idxmax(axis=1).str.slice(start=6)\n",
-    "df_max_daily['SOFA_min_day'] =temp.idxmin(axis=1).str.slice(start=6)\n",
+    "df_max_daily['SOFA_max_day'] =temp.idxmax(axis=1,skipna=True).str.slice(start=6)\n",
+    "df_max_daily['SOFA_min_day'] =temp.idxmin(axis=1,skipna=True).str.slice(start=6)\n",
     "df_max_daily['SOFA_long_stay'] = ~pd.isnull(df_max_daily['SOFA_d8'])\n",
     "\n",
     "df_max_daily['TotalAUC'] = df_max_daily[c_list[c_list.str.contains('Area'.format(day_num))]].sum(axis=1, skipna=True)\n",
