--- a/compile_data.ipynb
+++ b/compile_data.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bf8ef261",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pandas version:  2.1.2\n",
-      "SQLAlchemy version:  2.0.23\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import sqlalchemy\n",
@@ -32,27 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e7b7b84a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connection successful!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Postgres username, password, and database name\n",
-    "POSTGRES_ADDRESS =  ## INSERT YOUR DB ADDRESS\n",
-    "POSTGRES_PORT =  ## INSERT YOUR PORT (DEFAULT IS 5432)\n",
-    "POSTGRES_USERNAME =  ## INSERT YOUR POSTGRES USERNAME\n",
-    "POSTGRES_PASSWORD = ## INSERT YOUR POSTGRES PASSWORD\n",
-    "POSTGRES_DBNAME =  ## INSERT YOUR POSTGRES DATABASE NAME\n",
+    "POSTGRES_ADDRESS = 'localhost' ## INSERT YOUR DB ADDRESS\n",
+    "POSTGRES_PORT = 5432 ## INSERT YOUR PORT (DEFAULT IS 5432)\n",
+    "POSTGRES_USERNAME = '' ## INSERT YOUR POSTGRES USERNAME\n",
+    "POSTGRES_PASSWORD = '' ## INSERT YOUR POSTGRES PASSWORD\n",
+    "POSTGRES_DBNAME =  '' ## INSERT YOUR POSTGRES DATABASE NAME\n",
     "\n",
     "# A long string that contains the necessary Postgres login information\n",
     "# Create the connection\n",
@@ -71,20 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2f6b6160",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully connected to the database!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dbConnection = engine.connect()\n",
     "\n",
@@ -96,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "63d02427-1fb3-459e-a2b5-022411bfa7bf",
    "metadata": {
     "tags": []
@@ -182,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7c1ceb1e-cd4f-4dc5-af8e-f5b60d6f18f3",
    "metadata": {
     "tags": []
@@ -287,9 +262,8 @@
     "df_max_daily['TotalAUC'] = df_max_daily[c_list[c_list.str.contains('Area'.format(day_num))]].sum(axis=1, skipna=True)\n",
     "\n",
     "#coerces races into smaller list of categories\n",
-    "race_map =pd.read_csv('race_map.csv',header=None)\n",
-    "race_map.columns=['race','race_sh']\n",
-    "df_max_daily['race'] = df_max_daily.merge(race_map, on='race')['race_sh']\n",
+    "race_map =pd.read_csv('race_map.csv',header=None,index_col=0)\n",
+    "df_max_daily['race'] = df_max_daily['race'].map(race_map.to_dict()[1])\n",
     "\n",
     "df_max_daily.to_csv(\"sofa_parameters.csv\", index=False)"
    ]
@@ -303,14 +277,6 @@
    "source": [
     "# continue to analyze_results to run analysis"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c27464fd-b6cf-4810-97d2-6f92eb554ccc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -329,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
