minor changes to plot and display spider plot values

--- a/compile_data.ipynb
+++ b/compile_data.ipynb
@@ -167,6 +167,7 @@
     "# Note surivaval now occus relative to when an infection is first identified\n",
     "sofa_dem['survival']=pd.to_datetime(sofa_dem['dod'])-sofa_dem['suspected_infection_time']\n",
     "sofa_dem['survival'] = sofa_dem['survival'].dt.days\n",
+    "sofa_dem.loc[pd.isna(sofa_dem['survival']),'survival']=5000\n",
     "sofa_dem.loc[sofa_dem['survival'] <=30, '30d_mortality_status'] = '1'\n",
     "sofa_dem.loc[sofa_dem['survival'] > 30, '30d_mortality_status'] = '0' \n",
     "sofa_dem.loc[sofa_dem['survival'] <=90, '90d_mortality_status'] = '1'\n",
